src/components/Collapse/collapse.scss
@import "../../styles/index.scss";

.container_collapse {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 1024px;
  margin: 0 auto;

  .collapsible {
    position: relative;
    z-index: 10;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: $red;
    color: $white;
    cursor: pointer;
    padding: 10px 20px 10px 15px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 24px;
    font-weight: 700;
    border-radius: 10px;

    @media (max-width: 1280px) {
      font-size: 20px;
    }

    @media (max-width: 768px) {
      font-size: 14px;
      border-radius: 5px;
    }

    .fa-chevron-up {
      transition: transform 0.5s ease;
    }

    .fa-chevron-up.active {
      transform: rotate(-180deg);
    }
  }

  .content {
    position: relative;
    z-index: 9;
    max-height: 0;
    margin: -8px 0 0 0;
    overflow: hidden;
    transition: max-height 0.5s ease;
    background-color: $dark;
    border-radius: 0 0 10px 10px;

    &.active {
      transition: max-height 2s ease;
      max-height: 200px;
    }

    .content_collapse {
      display: flex;
      flex-direction: column;
      padding: 20px;

      li {
        font-size: 18px;
        font-weight: 500;
        line-height: 1.2;

        @media (max-width: 1280px) {
          font-size: 16px;
        }

        @media (max-width: 768px) {
          font-size: 14px;
        }
      }
    }
  }
}

